crates/aion-awl/tests/fixtures/rev2/flow-shape/invalid/distribute_not_alone.awl
//! Distribute is its step's only line; a second statement is illegal.
workflow crowded
  input items: [String]
  outcome done: type String, route success

worker w
  action work(item: String) -> String

step wave
  distribute item in items
  work(item: item) -> note

step gather
  collect note -> notes
  "done" |> route done
